#!/usr/bin/env python3
#
# Copyright 2022 Graviti. Licensed under MIT License.
#

[metadata]
name = hit-cli
version = attr: hit.__version__
url = https://github.com/Graviti-AI/hit-cli
author = Graviti
author_email = pypi@graviti.com
license = MIT
license_file = LICENSE
keywords = github, git, hit
description = Graviti Github workflow CLI
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.6
install_requires =
    click >= 7.0.0
    PyGithub >= 1.54.0

[options.packages.find]
include = hit*
exclude = *.tests

[options.package_data]
hit =
    py.typed

[options.entry_points]
console_scripts = hit = hit.cli:hit
